# watchmedo

./: .gitignore  Cargo.toml  README.md  justfile
crates/watchmedo-probe/: Cargo.toml
crates/watchmedo-probe-api/: Cargo.toml
crates/watchmedo-probe/src/: lib.rs
crates/watchmedo-sidecar/: Cargo.toml
crates/watchmedo-sidecar/src/: main.rs
src/: cli.rs  collector.rs  input_keys.rs  input_trace.rs  main.rs  network.rs  protocol.rs  shell_history.rs  state.rs  web.rs
web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
