[workspace]
members = [
	"crates/watchmedo-probe-api",
	"crates/watchmedo-sidecar",
]
resolver = "3"

[package]
name = "watchmedo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
evdev = "0.13"
futures = "0.3"
libp2p = { version = "0.56", features = ["gossipsub", "macros", "noise", "request-response", "serde", "tcp", "tokio", "yamux", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.38", default-features = false, features = ["disk", "network", "system"] }
tokio = { version = "1.44", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
watchmedo-probe-api = { path = "crates/watchmedo-probe-api" }
