[package]
name = "watchmedo-probe"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["io-util"] }

[package.metadata.release]
release = true
publish = false
