[package]
name = "watchmedo-sidecar"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "watchmedo-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
tokio = { version = "1.44", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
watchmedo-probe = { path = "../watchmedo-probe" }

[package.metadata.release]
release = true
publish = false
